Implement about-section (#3)

--- a/src/sass/base/_font.scss
+++ b/src/sass/base/_font.scss
@@ -8,4 +8,9 @@ $font: (
     bold: 700,
   ),
   font-style: normal,
+  font-size: (
+    small: 1rem,
+    medium: 1.5rem,
+    large: 2rem,
+  ),
 );
