--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,5 +1,6 @@
 :root {
   font-family: "Bai Jamjuree", "sans-serif";
+  font-size: 16px;
 }
 
 * {
@@ -18,10 +19,23 @@ body {
   flex-direction: column;
 }
 
+main {
+  padding: 1rem;
+}
+
 img {
   width: 100%;
   height: 100%;
   object-fit: cover;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
+li {
+  list-style: none;
 }
 
 /*# sourceMappingURL=index.css.map */
