--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,3 +1,29 @@
+.header {
+  position: sticky;
+  top: 0;
+  z-index: 1000;
+  padding: 0.5rem;
+  margin: 0 0 0 auto;
+}
+.header__nav {
+  display: none;
+}
+.header__nav-list {
+  display: flex;
+  gap: 1rem;
+}
+
+.about {
+  display: flex;
+  flex-direction: column;
+}
+.about__title {
+  font-size: 1.5rem;
+}
+.about__text {
+  font-size: 1rem;
+}
+
 :root {
   font-family: "Bai Jamjuree", "sans-serif";
   font-size: 16px;
