--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,5 +1,7 @@
 @use "sass:map";
 @use "./base/font";
+@use "./components/header";
+@use "./components/about";
 
 :root {
   font-family: map.get(font.$font, font-family, primary),
