Implement home-section (#5)

--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,6 +1,7 @@
 @use "sass:map";
 @use "./base/font";
 @use "./components/header";
+@use "./components/home";
 @use "./components/about";
 
 :root {
