--- a/src/css/index.css
+++ b/src/css/index.css
@@ -13,6 +13,25 @@
   gap: 1rem;
 }
 
+.home {
+  background-image: url(../../../images/home-background.jpg);
+  background-size: cover;
+  background-position: center;
+  padding: 2rem 1rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem;
+}
+.home__title {
+  font-size: 2rem;
+}
+.home__contact {
+  display: flex;
+  justify-content: center;
+  gap: 2rem;
+}
+
 .about {
   display: flex;
   flex-direction: column;
