--- a/src/css/index.css
+++ b/src/css/index.css
@@ -35,12 +35,56 @@
 .about {
   display: flex;
   flex-direction: column;
+  padding: 2rem 1rem;
 }
 .about__title {
   font-size: 1.5rem;
 }
 .about__text {
   font-size: 1rem;
+}
+
+.skills__title {
+  font-size: 1.5rem;
+  margin-bottom: 1rem;
+}
+.skills__list {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+.skills__middle-categories {
+  background-color: rgb(240, 240, 240);
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+.skills__middle-categories h5 {
+  margin-bottom: 1rem;
+}
+.skills__small-category {
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 1rem;
+}
+.skills__item-container {
+  text-align: center;
+  font-size: 2rem;
+  min-width: 60px;
+}
+.skills__item-container img {
+  width: 2rem;
+  height: 2rem;
+}
+.skills__item-name {
+  font-size: 1rem;
+}
+.skills__others-item {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
 }
 
 :root {
