--- a/src/sass/sections/_about.scss
+++ b/src/sass/sections/_about.scss
@@ -4,6 +4,7 @@
 .about {
   display: flex;
   flex-direction: column;
+  padding: 2rem 1rem;
 
   &__title {
     font-size: map.get(font.$font, font-size, medium);
