Implement history-section (#7)

--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -4,6 +4,7 @@
 @use "./sections/home";
 @use "./sections/about";
 @use "./sections/skills";
+@use "./sections/history";
 
 :root {
   font-family: map.get(font.$font, font-family, primary),
