--- a/src/css/index.css
+++ b/src/css/index.css
@@ -44,6 +44,9 @@
   font-size: 1rem;
 }
 
+.skills {
+  padding: 2rem 1rem;
+}
 .skills__title {
   font-size: 1.5rem;
   margin-bottom: 1rem;
@@ -85,6 +88,26 @@
   display: flex;
   align-items: center;
   gap: 0.5rem;
+}
+
+.history {
+  padding: 2rem 1rem;
+}
+.history__title {
+  font-size: 1.5rem;
+  margin-bottom: 1rem;
+}
+.history__date {
+  padding: 0.2rem;
+}
+.history__contents {
+  padding-bottom: 1rem;
+  padding-left: 0.7rem;
+  margin-left: 0.5rem;
+  border-left: 1px solid;
+}
+.history__contents-list {
+  background-color: rgb(240, 240, 240);
 }
 
 :root {
