--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -5,6 +5,7 @@
 @use "./sections/about";
 @use "./sections/skills";
 @use "./sections/history";
+@use "./sections/certification";
 
 :root {
   font-family: map.get(font.$font, font-family, primary),
