Implement contact-section (#9)

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -158,6 +158,21 @@
   object-fit: cover;
 }
 
+.contact {
+  padding: 2rem 1rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.contact__title {
+  font-size: 1.5rem;
+  margin-bottom: 1rem;
+}
+.contact__address {
+  display: flex;
+  gap: 1rem;
+}
+
 :root {
   font-family: "Bai Jamjuree", "sans-serif";
   font-size: 16px;
