--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -7,6 +7,7 @@
 @use "./sections/history";
 @use "./sections/certification";
 @use "./sections/project";
+@use "./sections/contact";
 
 :root {
   font-family: map.get(font.$font, font-family, primary),
