--- a/src/css/index.css
+++ b/src/css/index.css
@@ -26,6 +26,12 @@
 .home__title {
   font-size: 2rem;
 }
+.home__image {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  filter: grayscale(1);
+}
 .home__contact {
   display: flex;
   justify-content: center;
@@ -211,11 +217,10 @@
 html,
 body {
   height: 100%;
-}
-
-body {
   display: flex;
   flex-direction: column;
+  min-height: 100vh;
+  overflow: auto;
 }
 
 main {
