--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -25,11 +25,10 @@
 html,
 body {
   height: 100%;
-}
-
-body {
   display: flex;
   flex-direction: column;
+  min-height: 100vh;
+  overflow: auto;
 }
 
 main {
