--- a/src/sass/sections/_home.scss
+++ b/src/sass/sections/_home.scss
@@ -1,5 +1,5 @@
 @use "sass:map";
-@use "../base/font";
+@use "../abstracts/font";
 
 .home {
   background-image: url(../../../images/home-background.jpg);
