--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,12 +1,89 @@
+:root {
+  font-family: "Bai Jamjuree", "sans-serif";
+  font-size: 12px;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+html,
+body {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  overflow: auto;
+}
+
+body {
+  scroll-padding-top: 100px;
+}
+
+main {
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+}
+
+img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
+li {
+  list-style: none;
+}
+
+@media (min-width: 768px) {
+  :root {
+    font-size: 16px;
+  }
+}
+@media (min-width: 1024px) {
+  :root {
+    font-size: 20px;
+  }
+}
+@media (min-width: 1280px) {
+  :root {
+    font-size: 24px;
+  }
+}
+.container {
+  max-width: 1200px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: flex-end;
+  padding: 2rem;
+}
+
 .header {
   position: sticky;
   top: 0;
   z-index: 1000;
-  padding: 0.5rem;
-  margin: 0 0 0 auto;
+  background-color: white;
+}
+@media (min-width: 640px) {
+  .header__humbergar {
+    display: none;
+  }
 }
 .header__nav {
   display: none;
+}
+@media (min-width: 640px) {
+  .header__nav {
+    display: flex;
+  }
 }
 .header__nav-list {
   display: flex;
@@ -41,7 +118,7 @@
 .about {
   display: flex;
   flex-direction: column;
-  padding: 2rem 1rem;
+  padding: 2rem 0;
 }
 .about__title {
   font-size: 1.5rem;
@@ -51,7 +128,7 @@
 }
 
 .skills {
-  padding: 2rem 1rem;
+  padding: 2rem 0;
 }
 .skills__title {
   font-size: 1.5rem;
@@ -61,12 +138,14 @@
   display: flex;
   flex-direction: column;
   gap: 1rem;
+  text-align: center;
 }
 .skills__middle-categories {
   background-color: rgb(240, 240, 240);
   padding: 1rem;
   display: flex;
   flex-direction: column;
+  align-items: center;
   gap: 1rem;
 }
 .skills__middle-categories h5 {
@@ -75,6 +154,7 @@
 .skills__small-category {
   display: flex;
   align-items: center;
+  justify-content: center;
   flex-wrap: wrap;
   gap: 1rem;
 }
@@ -91,13 +171,31 @@
   font-size: 1rem;
 }
 .skills__others-item {
+  text-align: left;
   display: flex;
   align-items: center;
   gap: 0.5rem;
 }
 
+@media (min-width: 768px) {
+  .skills__list {
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 1rem;
+    align-items: stretch;
+  }
+  .skills__big-category {
+    flex: 1;
+  }
+  .skills__middle-categories {
+    height: 100%;
+  }
+  .skills__others {
+    max-width: 250px;
+  }
+}
 .history {
-  padding: 2rem 1rem;
+  padding: 2rem 0;
 }
 .history__title {
   font-size: 1.5rem;
@@ -117,7 +215,7 @@
 }
 
 .certification {
-  padding: 2rem 1rem;
+  padding: 2rem 0;
 }
 .certification__title {
   font-size: 1.5rem;
@@ -136,7 +234,7 @@
 }
 
 .project {
-  padding: 2rem 1rem;
+  padding: 2rem 0;
 }
 .project__title {
   font-size: 1.5rem;
@@ -150,10 +248,16 @@
 }
 .project__item {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   gap: 2rem;
   padding: 0.2rem 1rem;
   height: 7rem;
+}
+@media (min-width: 640px) {
+  .project__item {
+    display: flex;
+    flex-direction: row;
+  }
 }
 .project__item-text {
   width: 40%;
@@ -201,45 +305,6 @@
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
-}
-
-:root {
-  font-family: "Bai Jamjuree", "sans-serif";
-  font-size: 16px;
-}
-
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-html,
-body {
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  min-height: 100vh;
-  overflow: auto;
-}
-
-main {
-  padding: 1rem;
-}
-
-img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-li {
-  list-style: none;
 }
 
 /*# sourceMappingURL=index.css.map */
