--- a/src/sass/sections/_about.scss
+++ b/src/sass/sections/_about.scss
@@ -1,10 +1,10 @@
 @use "sass:map";
-@use "../base/font";
+@use "../abstracts/font";
 
 .about {
   display: flex;
   flex-direction: column;
-  padding: 2rem 1rem;
+  padding: 2rem 0;
 
   &__title {
     font-size: map.get(font.$font, font-size, medium);
