--- a/src/sass/sections/_certification.scss
+++ b/src/sass/sections/_certification.scss
@@ -1,11 +1,11 @@
 @use "sass:map";
-@use "../base/font";
+@use "../abstracts/font";
 $base-class: certification;
 
 // .certification
 
 .#{$base-class} {
-  padding: 2rem 1rem;
+  padding: 2rem 0;
 
   &__title {
     font-size: map.get(font.$font, font-size, medium);
