--- a/src/sass/sections/_header.scss
+++ b/src/sass/sections/_header.scss
@@ -1,12 +1,39 @@
+@use "sass:map";
+@use "../abstracts/screen-size";
+@use "../abstracts/placeholders";
+
+@mixin responsive($size) {
+  @media (min-width: map.get(screen-size.$screen-size, $size)) {
+    @content;
+  }
+}
+
+.container {
+  max-width: 1200px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: flex-end;
+  padding: 2rem;
+}
+
 .header {
   position: sticky;
   top: 0;
   z-index: 1000;
-  padding: 0.5rem;
-  margin: 0 0 0 auto;
+  background-color: white;
+
+  &__humbergar {
+    @include responsive(sm) {
+      display: none;
+    }
+  }
 
   &__nav {
     display: none;
+
+    @include responsive(sm) {
+      display: flex;
+    }
   }
 
   &__nav-list {
