--- a/src/sass/sections/_project.scss
+++ b/src/sass/sections/_project.scss
@@ -1,11 +1,18 @@
 @use "sass:map";
-@use "../base/font";
+@use "../abstracts/font";
+@use "../abstracts/screen-size";
+
+@mixin responsive($size) {
+  @media (min-width: map.get(screen-size.$screen-size, $size)) {
+    @content;
+  }
+}
 $base-class: project;
 
 // .project
 
 .#{$base-class} {
-  padding: 2rem 1rem;
+  padding: 2rem 0;
 
   &__title {
     font-size: map.get(font.$font, font-size, medium);
@@ -21,10 +28,15 @@ $base-class: project;
 
   &__item {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     gap: 2rem;
     padding: 0.2rem 1rem;
     height: 7rem;
+
+    @include responsive(sm) {
+      display: flex;
+      flex-direction: row;
+    }
   }
 
   &__item-text {
