--- a/src/sass/sections/_skills.scss
+++ b/src/sass/sections/_skills.scss
@@ -1,11 +1,14 @@
 @use "sass:map";
-@use "../base/font";
+@use "../abstracts/font";
+@use "../abstracts/screen-size";
+@use "../abstracts/mixin";
 $base-class: skills;
 
 // .skills
 
 .#{$base-class} {
-  padding: 2rem 1rem;
+  padding: 2rem 0;
+
   &__title {
     font-size: map.get(font.$font, font-size, medium);
     margin-bottom: 1rem;
@@ -15,14 +18,15 @@ $base-class: skills;
     display: flex;
     flex-direction: column;
     gap: 1rem;
+    text-align: center;
   }
 
   &__middle-categories {
     background-color: rgb(240, 240, 240);
-
     padding: 1rem;
     display: flex;
     flex-direction: column;
+    align-items: center;
     gap: 1rem;
 
     h5 {
@@ -33,6 +37,7 @@ $base-class: skills;
   &__small-category {
     display: flex;
     align-items: center;
+    justify-content: center;
     flex-wrap: wrap;
     gap: 1rem;
   }
@@ -53,8 +58,32 @@ $base-class: skills;
   }
 
   &__others-item {
+    text-align: left;
     display: flex;
     align-items: center;
     gap: 0.5rem;
+  }
+}
+
+@include mixin.responsive(md) {
+  .#{$base-class} {
+    &__list {
+      flex-direction: row;
+      flex-wrap: wrap;
+      gap: 1rem;
+      align-items: stretch;
+    }
+
+    &__big-category {
+      flex: 1;
+    }
+
+    &__middle-categories {
+      height: 100%;
+    }
+
+    &__others {
+      max-width: 250px;
+    }
   }
 }
