--- a/src/sass/sections/_history.scss
+++ b/src/sass/sections/_history.scss
@@ -1,11 +1,12 @@
 @use "sass:map";
 @use "../abstracts/font";
+@use "../abstracts/colors";
 $base-class: history;
 
 // .history
 
 .#{$base-class} {
-  padding: 2rem 0;
+  padding: 4rem 0;
 
   &__title {
     font-size: map.get(font.$font, font-size, medium);
@@ -13,17 +14,22 @@ $base-class: history;
   }
 
   &__date {
-    padding: 0.2rem;
+    padding: 1rem;
   }
 
   &__contents {
-    padding-bottom: 1rem;
-    padding-left: 0.7rem;
-    margin-left: 0.5rem;
-    border-left: 1px solid;
+    padding-bottom: 2rem;
+    padding-left: 1.7rem;
+    margin-left: 1.5rem;
+    border-left: 1px solid map.get(colors.$colors, gray);
   }
 
   &__contents-list {
+    padding: 0.5rem 1rem;
     background-color: rgb(240, 240, 240);
+
+    li {
+      list-style: inside;
+    }
   }
 }
