--- a/src/css/index.css
+++ b/src/css/index.css
@@ -34,9 +34,20 @@ img {
   object-fit: cover;
 }
 
+button {
+  cursor: pointer;
+  border: none;
+}
+button:hover {
+  opacity: 0.5;
+}
+
 a {
   color: inherit;
   text-decoration: none;
+}
+a:hover {
+  opacity: 0.5;
 }
 
 li {
@@ -83,6 +94,8 @@ li {
 @media (min-width: 640px) {
   .header__nav {
     display: flex;
+    font-size: 1rem;
+    color: gray;
   }
 }
 .header__nav-list {
@@ -94,11 +107,12 @@ li {
   background-image: url(../../../images/home-background.jpg);
   background-size: cover;
   background-position: center;
-  padding: 2rem 1rem;
+  padding: 3rem 1rem;
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 1rem;
+  text-align: center;
+  gap: 3rem;
 }
 .home__title {
   font-size: 2rem;
@@ -118,17 +132,18 @@ li {
 .about {
   display: flex;
   flex-direction: column;
-  padding: 2rem 0;
+  padding: 4rem 0;
 }
 .about__title {
   font-size: 1.5rem;
+  margin-bottom: 1rem;
 }
 .about__text {
   font-size: 1rem;
 }
 
 .skills {
-  padding: 2rem 0;
+  padding: 4rem 0;
 }
 .skills__title {
   font-size: 1.5rem;
@@ -137,7 +152,7 @@ li {
 .skills__list {
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  gap: 2rem;
   text-align: center;
 }
 .skills__middle-categories {
@@ -195,27 +210,31 @@ li {
   }
 }
 .history {
-  padding: 2rem 0;
+  padding: 4rem 0;
 }
 .history__title {
   font-size: 1.5rem;
   margin-bottom: 1rem;
 }
 .history__date {
-  padding: 0.2rem;
+  padding: 1rem;
 }
 .history__contents {
-  padding-bottom: 1rem;
-  padding-left: 0.7rem;
-  margin-left: 0.5rem;
-  border-left: 1px solid;
+  padding-bottom: 2rem;
+  padding-left: 1.7rem;
+  margin-left: 1.5rem;
+  border-left: 1px solid gray;
 }
 .history__contents-list {
+  padding: 0.5rem 1rem;
   background-color: rgb(240, 240, 240);
+}
+.history__contents-list li {
+  list-style: inside;
 }
 
 .certification {
-  padding: 2rem 0;
+  padding: 4rem 0;
 }
 .certification__title {
   font-size: 1.5rem;
@@ -223,18 +242,20 @@ li {
 }
 .certification__list {
   background-color: rgb(240, 240, 240);
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
 .certification__name {
-  padding: 0.2rem;
+  padding: 1rem;
 }
 .certification__contents {
   padding-bottom: 1rem;
-  padding-left: 0.3rem;
-  margin-left: 0.7rem;
+  padding-left: 2rem;
 }
 
 .project {
-  padding: 2rem 0;
+  padding: 4rem 0;
 }
 .project__title {
   font-size: 1.5rem;
@@ -270,9 +291,16 @@ li {
 
 .contact {
   padding: 2rem 1rem;
+  margin-top: 5rem;
+  margin-bottom: 10rem;
+}
+.contact__container {
+  padding: 1.5rem 0;
+  background-color: rgb(240, 240, 240);
   display: flex;
   flex-direction: column;
   align-items: center;
+  max-width: 1200px;
 }
 .contact__title {
   font-size: 1.5rem;
@@ -286,12 +314,18 @@ li {
 .footer {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  text-align: center;
-  padding: 1rem;
   background-image: url(../../../images/image-footer.jpg);
   background-size: cover;
   background-position: center;
+}
+.footer__container {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  align-items: center;
+  text-align: center;
+  padding: 1rem;
+  color: gray;
 }
 .footer__nav {
   margin-bottom: 3rem;
@@ -301,10 +335,11 @@ li {
   flex-direction: column;
   gap: 0.5rem;
 }
-.footer__item {
-  display: flex;
-  flex-direction: column;
-  gap: 0.5rem;
+@media (min-width: 768px) {
+  .footer__items {
+    flex-direction: row;
+    justify-content: center;
+  }
 }
 
 /*# sourceMappingURL=index.css.map */
