--- a/src/sass/abstracts/_base.scss
+++ b/src/sass/abstracts/_base.scss
@@ -39,9 +39,22 @@ img {
   object-fit: cover;
 }
 
+button {
+  cursor: pointer;
+  border: none;
+
+  &:hover {
+    opacity: 0.5;
+  }
+}
+
 a {
   color: inherit;
   text-decoration: none;
+
+  &:hover {
+    opacity: 0.5;
+  }
 }
 
 li {
