--- a/src/sass/sections/_certification.scss
+++ b/src/sass/sections/_certification.scss
@@ -5,7 +5,7 @@ $base-class: certification;
 // .certification
 
 .#{$base-class} {
-  padding: 2rem 0;
+  padding: 4rem 0;
 
   &__title {
     font-size: map.get(font.$font, font-size, medium);
@@ -14,15 +14,17 @@ $base-class: certification;
 
   &__list {
     background-color: rgb(240, 240, 240);
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
   }
 
   &__name {
-    padding: 0.2rem;
+    padding: 1rem;
   }
 
   &__contents {
     padding-bottom: 1rem;
-    padding-left: 0.3rem;
-    margin-left: 0.7rem;
+    padding-left: 2rem;
   }
 }
