--- a/src/sass/sections/_contact.scss
+++ b/src/sass/sections/_contact.scss
@@ -6,9 +6,17 @@ $base-class: contact;
 
 .#{$base-class} {
   padding: 2rem 1rem;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  margin-top: 5rem;
+  margin-bottom: 10rem;
+
+  &__container {
+    padding: 1.5rem 0;
+    background-color: rgb(240, 240, 240);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    max-width: 1200px;
+  }
 
   &__title {
     font-size: map.get(font.$font, font-size, medium);
