--- a/src/sass/sections/_footer.scss
+++ b/src/sass/sections/_footer.scss
@@ -1,5 +1,7 @@
 @use "sass:map";
 @use "../abstracts/font";
+@use "../abstracts/mixin";
+@use "../abstracts/colors";
 $base-class: footer;
 
 // .footer
@@ -7,13 +9,20 @@ $base-class: footer;
 .#{$base-class} {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  text-align: center;
-  padding: 1rem;
 
   background-image: url(../../../images/image-footer.jpg);
   background-size: cover;
   background-position: center;
+
+  &__container {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    align-items: center;
+    text-align: center;
+    padding: 1rem;
+    color: map.get(colors.$colors, gray);
+  }
 
   &__nav {
     margin-bottom: 3rem;
@@ -25,9 +34,10 @@ $base-class: footer;
     gap: 0.5rem;
   }
 
-  &__item {
-    display: flex;
-    flex-direction: column;
-    gap: 0.5rem;
+  @include mixin.responsive(md) {
+    &__items {
+      flex-direction: row;
+      justify-content: center;
+    }
   }
 }
