--- a/src/sass/sections/_home.scss
+++ b/src/sass/sections/_home.scss
@@ -5,12 +5,13 @@
   background-image: url(../../../images/home-background.jpg);
   background-size: cover;
   background-position: center;
-  padding: 2rem 1rem;
+  padding: 3rem 1rem;
 
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 1rem;
+  text-align: center;
+  gap: 3rem;
 
   &__title {
     font-size: map.get(font.$font, font-size, large);
