--- a/src/sass/sections/_project.scss
+++ b/src/sass/sections/_project.scss
@@ -1,12 +1,8 @@
 @use "sass:map";
 @use "../abstracts/font";
 @use "../abstracts/screen-size";
+@use "../abstracts/mixin";
 
-@mixin responsive($size) {
-  @media (min-width: map.get(screen-size.$screen-size, $size)) {
-    @content;
-  }
-}
 $base-class: project;
 
 // .project
@@ -33,7 +29,7 @@ $base-class: project;
     padding: 0.2rem 1rem;
     height: 7rem;
 
-    @include responsive(sm) {
+    @include mixin.responsive(sm) {
       display: flex;
       flex-direction: row;
     }
