--- a/src/css/index.css
+++ b/src/css/index.css
@@ -34,14 +34,6 @@ img {
   object-fit: cover;
 }
 
-button {
-  cursor: pointer;
-  border: none;
-}
-button:hover {
-  opacity: 0.5;
-}
-
 a {
   color: inherit;
   text-decoration: none;
@@ -84,7 +76,7 @@ li {
   background-color: white;
 }
 @media (min-width: 640px) {
-  .header__humbergar {
+  .header__hambergar {
     display: none;
   }
 }
@@ -101,6 +93,29 @@ li {
 .header__nav-list {
   display: flex;
   gap: 1rem;
+}
+
+.menu {
+  position: fixed;
+  transform: translateY(-100%);
+  transition: transform 0.3s;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 999;
+  background: black;
+  color: white;
+  list-style: none;
+  padding-top: 4rem;
+}
+.menu__closeIcon {
+  display: none;
+  color: white;
+}
+
+.showMenu {
+  transform: translateY(0);
 }
 
 .home {
@@ -340,6 +355,20 @@ li {
     flex-direction: row;
     justify-content: center;
   }
+}
+
+button {
+  cursor: pointer;
+  border: none;
+}
+button:hover {
+  opacity: 0.5;
+}
+
+.button__hamburger {
+  position: fixed;
+  padding: 0.2rem;
+  background-color: white;
 }
 
 /*# sourceMappingURL=index.css.map */
