--- a/src/sass/sections/_header.scss
+++ b/src/sass/sections/_header.scss
@@ -19,7 +19,7 @@
   z-index: 1000;
   background-color: white;
 
-  &__humbergar {
+  &__hambergar {
     @include mixin.responsive(sm) {
       display: none;
     }
@@ -39,4 +39,28 @@
     display: flex;
     gap: 1rem;
   }
+}
+
+.menu {
+  position: fixed;
+  transform: translateY(-100%);
+  transition: transform 0.3s;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 999;
+  background: map.get(colors.$colors, black);
+  color: map.get(colors.$colors, white);
+  list-style: none;
+  padding-top: 4rem;
+
+  &__closeIcon {
+    display: none;
+    color: map.get(colors.$colors, white);
+  }
+}
+
+.showMenu {
+  transform: translateY(0);
 }
