--- a/src/sass/components/_buttons.scss
+++ b/src/sass/components/_buttons.scss
@@ -1,5 +1,6 @@
 @use "sass:map";
 @use "../abstracts/colors";
+@use "../abstracts/mixin";
 
 button {
   cursor: pointer;
@@ -12,8 +13,15 @@ button {
 
 .button {
   &__hamburger {
-    position: fixed;
     padding: 0.2rem;
     background-color: white;
+    border: black solid 1px;
+    z-index: 1002;
+    width: 2rem;
+    height: 2rem;
+
+    @include mixin.responsive(sm) {
+      display: none;
+    }
   }
 }
