--- a/src/css/index.css
+++ b/src/css/index.css
@@ -72,13 +72,8 @@ li {
 .header {
   position: sticky;
   top: 0;
-  z-index: 1000;
   background-color: white;
-}
-@media (min-width: 640px) {
-  .header__hambergar {
-    display: none;
-  }
+  z-index: 1000;
 }
 .header__nav {
   display: none;
@@ -95,27 +90,29 @@ li {
   gap: 1rem;
 }
 
-.menu {
+.hamburger-menu {
   position: fixed;
+  z-index: 1001;
   transform: translateY(-100%);
-  transition: transform 0.3s;
+  transition: transform 0.3s ease;
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
-  z-index: 999;
+  padding-top: 4rem;
+  padding-left: 4rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
   background: black;
   color: white;
   list-style: none;
-  padding-top: 4rem;
 }
-.menu__closeIcon {
-  display: none;
-  color: white;
-}
-
-.showMenu {
+.hamburger-menu__showMenu {
   transform: translateY(0);
+}
+.hamburger-menu__closeIcon {
+  display: none;
 }
 
 .home {
@@ -366,9 +363,17 @@ button:hover {
 }
 
 .button__hamburger {
-  position: fixed;
   padding: 0.2rem;
   background-color: white;
+  border: black solid 1px;
+  z-index: 1002;
+  width: 2rem;
+  height: 2rem;
+}
+@media (min-width: 640px) {
+  .button__hamburger {
+    display: none;
+  }
 }
 
 /*# sourceMappingURL=index.css.map */
