--- a/src/sass/sections/_header.scss
+++ b/src/sass/sections/_header.scss
@@ -19,12 +19,6 @@
   z-index: 1000;
   background-color: white;
 
-  &__hambergar {
-    @include mixin.responsive(sm) {
-      display: none;
-    }
-  }
-
   &__nav {
     display: none;
 
@@ -41,26 +35,30 @@
   }
 }
 
-.menu {
+.hamburger-menu {
   position: fixed;
+  z-index: 1001;
   transform: translateY(-100%);
-  transition: transform 0.3s;
+  transition: transform 0.3s ease;
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
-  z-index: 999;
+  padding-top: 4rem;
+  padding-left: 4rem;
+
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
   background: map.get(colors.$colors, black);
   color: map.get(colors.$colors, white);
   list-style: none;
-  padding-top: 4rem;
+
+  &__showMenu {
+    transform: translateY(0);
+  }
 
   &__closeIcon {
     display: none;
-    color: map.get(colors.$colors, white);
   }
-}
-
-.showMenu {
-  transform: translateY(0);
 }
