--- a/src/css/index.css
+++ b/src/css/index.css
@@ -72,8 +72,8 @@ li {
 .header {
   position: sticky;
   top: 0;
-  background-color: white;
   z-index: 1000;
+  background-color: white;
 }
 .header__nav {
   display: none;
@@ -88,31 +88,6 @@ li {
 .header__nav-list {
   display: flex;
   gap: 1rem;
-}
-
-.hamburger-menu {
-  position: fixed;
-  z-index: 1001;
-  transform: translateY(-100%);
-  transition: transform 0.3s ease;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  padding-top: 4rem;
-  padding-left: 4rem;
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-  background: black;
-  color: white;
-  list-style: none;
-}
-.hamburger-menu__showMenu {
-  transform: translateY(0);
-}
-.hamburger-menu__closeIcon {
-  display: none;
 }
 
 .home {
@@ -320,7 +295,8 @@ li {
 }
 .contact__address {
   display: flex;
-  gap: 1rem;
+  gap: 3rem;
+  padding: 1rem;
 }
 
 .footer {
@@ -374,6 +350,46 @@ button:hover {
   .button__hamburger {
     display: none;
   }
+}
+
+.hamburger-menu {
+  position: fixed;
+  z-index: 1001;
+  transform: translateY(-100%);
+  transition: transform 0.3s ease;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  padding-top: 4rem;
+  padding-left: 4rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  background: black;
+  color: white;
+  list-style: none;
+}
+.hamburger-menu__showMenu {
+  transform: translateY(0);
+}
+.hamburger-menu__closeIcon {
+  display: none;
+}
+.hamburger-menu__section {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+.hamburger-menu__contact {
+  display: flex;
+  flex-direction: column;
+  padding: 3rem 0;
+  gap: 0.5rem;
+}
+.hamburger-menu__icons {
+  display: flex;
+  gap: 1rem;
 }
 
 /*# sourceMappingURL=index.css.map */
