--- a/src/sass/sections/_footer.scss
+++ b/src/sass/sections/_footer.scss
@@ -10,7 +10,7 @@ $base-class: footer;
   display: flex;
   flex-direction: column;
 
-  background-image: url(../../../images/image-footer.jpg);
+  background-image: url(./images/image-footer.jpg);
   background-size: cover;
   background-position: center;
 
