--- a/src/sass/sections/_home.scss
+++ b/src/sass/sections/_home.scss
@@ -2,7 +2,7 @@
 @use "../abstracts/font";
 
 .home {
-  background-image: url(../../../images/home-background.jpg);
+  background-image: url(./images/home-background.jpg);
   background-size: cover;
   background-position: center;
   padding: 3rem 1rem;
